# ollama-queue-proxy

./: .gitignore  .gitleaks.toml  CHANGELOG.md  Dockerfile  README.md  config.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: request-flow.drawio
src/ollama_queue_proxy/: __init__.py  auth.py  cache.py  concurrency.py  config.py  hosts.py  injection.py  main.py  middleware.py  proxy.py  queue.py  routing.py  webhooks.py
src/ollama_queue_proxy/routes/: queue.py  status.py
tests/: conftest.py  test_auth.py  test_cache.py  test_config.py  test_injection.py  test_integration.py  test_keepalive_concurrency.py  test_proxy.py  test_queue.py  test_routing.py  test_webhooks.py
